[gd_scene load_steps=3 format=2]

[ext_resource path="res://Greenhouse/BirbController.gd" type="Script" id=1]
[ext_resource path="res://Greenhouse/Birb.tscn" type="PackedScene" id=2]

[node name="BirbController" type="Node2D"]
script = ExtResource( 1 )

[node name="Birb1" parent="." instance=ExtResource( 2 )]
position = Vector2( 418.239, 288.696 )

[node name="Birb2" parent="." instance=ExtResource( 2 )]
position = Vector2( 903.1, 525.575 )

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
